# hackathon-codebase

./: .dockerignore  .gitignore  README.md  pyproject.toml  run_tests.ps1
backend/: .dockerignore  Dockerfile  README.md  cloudbuild.yaml  requirements.txt
backend/app/: __init__.py  agents.py  auth.py  chat_adapter.py  chat_store.py  config.py  cs_queue.py  feedback.py  gcp.py  grounding_agent.py  guardrails.py  llm.py  logging_setup.py  main.py  mcp_clients.py  orchestrator.py  prevent.py  retrieval.py  schemas.py  store.py  telemetry.py
backend/sql/: oneinvoice_app_schema.sql
bigquery-mcp/: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  tools.yaml
deploy/: DEPLOY.md  SETUP.md
docs/: SOLUTION_DESIGN.md
frontend/: Dockerfile  README.md  __init__.py  app.py  cloudbuild.yaml  requirements.txt
frontend-ori/: Dockerfile  README.md  cloudbuild.yaml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend-ori/src/: App.jsx  index.css
frontend/static/: index.html
gcs-mcp/: Dockerfile  __init__.py  app.py  cloudbuild.yaml  server.py
gcs-mcp/connectors/: __init__.py  rest_connector.py
gcs-mcp/models/: __init__.py  invoice.py
invoice-mcp/: Dockerfile  cloudbuild.yaml  container.py  requirements.txt  server.py
orchestrator/: Dockerfile  README.md  __init__.py  app.py  cloudbuild.yaml  config.py  genai_client.py  mcp_gateway.py  requirements.txt  schema_convert.py  schemas.py
scripts/: Load-EnvFile.ps1  discover_gcs.py  mcp_client_test.py
shared/: __init__.py  requirements.txt
(+101 files in other folders)
